<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Schedule</string>
    <string name="action_settings">Settings</string>
    <string name="action_sortby_name">Order by name</string>
    <string name="action_sortby_date">Order by date</string>
    <string name="action_save_appointment">Save</string>
    <string name="login_user">User: </string>
    <string name="login_pass">Password: </string>
    <string name="title_activity_login">My Schedule - Login</string>
    <string name="title_activity_home">My Appointments</string>
    <string name="title_activity_new_appointment">New Appointments</string>
    <string name="login_confirm_pass">Confirm Pass:</string>
    <string name="login_error_pass_match">Passwords don\'t match!</string>
    <string name="login_error_user_pass">User and Password error.</string>
    <string name="login_error_empty">Empty Field!</string>
    <string name="login_reg_success">Registration Success!</string>
    <string name="login_error_writing">Error while writting new user.</string>
    <string name="item_appointment_with">with:</string>
    <string name="new_appointment_name">Name:</string>
    <string name="new_appointment_description">Description:</string>
    <string name="new_appointment_time">Time:</string>
    <string name="new_appointment_save_success">Appointment success saved.</string>
    <string name="new_appointment_save_error">Error while saving appointment file.</string>
    <string name="new_appointment_read_error">Error while reading appointment file.</string>
    <string name="new_appointment_delete_success">Appointment success deleted.</string>
    <string name="new_appointment_delete_error">Error while deleting appointment.</string>
    <string name="view_holder_success_export">Appointment success exported to folder My Schedule!</string>
    <string name="view_holder_error_no_contact">No associated contact.</string>
    <string name="view_holder_error_export">Error while expoting appointment.</string>
    <string name="view_holder_option_edit">Edit</string>
    <string name="view_holder_option_delete">Delete</string>
    <string name="view_holder_option_export">Export</string>
    <string name="appointment_provider_description" translatable="false">Access to the appointment database.</string>
    <string name="permission_home_activity" translatable="false">Allows open home activity.</string>
    <string name="permission_read_appointment" translatable="false">Allows read a appointment.</string>
    <string name="permission_white_appointment" translatable="false">Allows write a new appointment.</string>
    <string name="home_exit_confirmation">Press again to exit</string>
    <string name="login_error_user_exist">User already registred.</string>
    <string name="home_nav_drawner_logout">Logout</string>
    <string name="home_nav_drawner_config">Configurations</string>

</resources>