<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".NewAppointmentActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingBottom="@dimen/default_margin">

                <TextView
                    android:text="@string/new_appointment_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/default_margin"
                    android:minEms="4"/>

                <EditText
                    android:id="@+id/etAppoitmentName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingBottom="@dimen/default_margin">

                <TextView
                    android:text="@string/new_appointment_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/default_margin"
                    android:minEms="4"/>

                <EditText
                    android:id="@+id/etAppoitmentDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="false"
                    android:lines="2"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingBottom="@dimen/default_margin">

                <TextView
                    android:text="@string/new_appointment_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/default_margin"
                    android:minEms="4"/>

                <EditText
                    android:id="@+id/etAppointmentTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="time"
                    android:editable="false"
                    android:ems="8"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right|bottom"
                    android:padding="@dimen/min_padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_appointment_with"
                        android:layout_marginRight="@dimen/min_margin"/>

                    <ImageView
                        android:id="@+id/ivWith"
                        android:layout_width="@dimen/contact_image_size"
                        android:layout_height="@dimen/contact_image_size"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_contact_picture_holo_light"/>

                </LinearLayout>

            </LinearLayout>

            <DatePicker
                android:id="@+id/dpAppointmentDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/min_padding"
                android:calendarViewShown="true"
                android:spinnersShown="true">
            </DatePicker>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
